<resources>
    <string name="app_name">Manga Reader</string>
    <string name="title_manga">Manga</string>
    <string name="title_recent">Recent</string>
    <string name="title_download">Download</string>
    <string name="title_favorites">Favorite</string>
    <string name="title_setting">Setting</string>
    <string name="title_source"><![CDATA[Source & Language]]></string>
    <string name="action_done">Done</string>
    <string name="pls_select_cource">Please select a course!</string>
    <string name="some_thing_wrong">Something went wrong!</string>
    <string name="title_sources">Source</string>
    <string name="title_search">Search</string>
    <string name="title_filter">Filter</string>
    <string name="loading">Loading...</string>
    <string name="title_sumarry">Summary</string>
    <string name="title_chapter">Chapter</string>
    <string name="title_item_chaper">Chap %s</string>
    <string name="overview">Overview</string>
    <string name="author">Author</string>
    <string name="status">Status</string>
    <string name="created_at">Created at</string>
    <string name="updated_at">Updated at</string>
    <string name="total">Total</string>
    <string name="genres">Genres</string>
    <string name="unknow">Unknow</string>
    <string name="total_chaps">%s Chaps</string>
    <string name="popular">Popular</string>
    <string name="title_new">New</string>
    <string name="update">Update</string>
    <string name="all_manga">All Manga</string>
    <string name="manga_filter">Manga Filter</string>
    <string name="manga_filter_result">Filter by genres</string>
    <string name="missing_data">There is no mangas!</string>
    <string name="no_data_with_key">No manga found with your key!</string>
    <string name="action_close">Close</string>
    <string name="last_chap">This is the last chap!</string>
    <string name="load_next_chap">Load chap %s</string>
    <string name="title_delete">Delete</string>
    <string name="title_delete_recent_done">All recent manga has been deleted!</string>
    <string name="title_delete_favorite_done">All favorit manga has been deleted!</string>
    <string name="title_delete_mangak_download_done">All mangak downloaded has been deleted!</string>
    <string name="action_undo">Undo</string>
    <string name="brightness">Brightness</string>
    <string name="reading_mode">Reading Mode</string>
    <string name="action_select_all">Select All</string>
    <string name="action_un_select_all">Un Select</string>
    <string name="title_add_to_download">Add to Download</string>
    <string name="action_download">Download</string>
    <string formatted="false" name="text_number_chap_download">Download %d chapter</string>
    <string name="action_cancel">Cancel</string>
    <string name="title_general">General</string>
    <string name="title_share_with_friend">Share Manga Reader with friends</string>
    <string name="title_upgrade">Upgrade</string>
    <string name="title_upgrade_remove_ads">Purchase Full Version - Remove Ads</string>
    <string name="title_restore">Already purchased? Restore</string>
    <string name="title_clear_cache">Clear cache</string>
    <string name="title_about_us">About us</string>
    <string name="title_disclaimer">Disclaimer</string>
    <string name="title_email">Email Support</string>
    <string name="title_rate_review"><![CDATA[Rate & Review App on Play Store]]></string>
    <string formatted="false" name="msg_download_chapter">Downloading chapter %s</string>
    <string formatted="false" name="msg_downloading">Downloading %s/100</string>
    <string name="msg_download_success">Download success</string>
    <string name="description_about_us">MiMa team is a mobile development team that creates apps for Play Store with many active users per month worldwide. MiMa Team alaways aims at redefining the way people interact with their mobile devices. The unique blend of passion and skills enables to deliver unrivaled products to the end users. We stay focused and create products that drive value to our users and make their life easier.</string>
    <string name="description_disclaimer">All manga, characters and logo belong to their respective copyrights owners.\n Manga Reader is developed by MiMa Team and does not have any affiliation with the content providers. We reserve the right to change the source of manga without prior notice.</string>
    <string name="app_banner">ca-app-pub-3940256099942544/6300978111</string>
    <!--<string name="app_banner">ca-app-pub-6790285608047387/2911675357</string>-->
    <string formatted="false" name="msg_percent_downloading">%d/100</string>
</resources>
