<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_manga"/>
    <item
        android:id="@+id/navigation_recent"
        android:icon="@drawable/ic_history"
        android:title="@string/title_recent"/>
    <item
        android:id="@+id/navigation_download"
        android:icon="@drawable/ic_download"
        android:title="@string/title_download"/>
    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/ic_favorite"
        android:title="@string/title_favorites"/>
    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/ic_settings"
        android:title="@string/title_setting"/>

</menu>
