<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>

        <variable
            name="viewModel"
            type="toandoan.framgia.com.rxjavaretrofit.screen.settings.SettingsViewModel"
            />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/color_bluegrey_900"
            tools:context="toandoan.framgia.com.rxjavaretrofit.screen.settings.SettingsActivity"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/color_bluegrey_900"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_15"
                    android:paddingBottom="@dimen/dp_5"
                    android:paddingLeft="@dimen/dp_10"
                    android:paddingTop="@dimen/dp_5"
                    android:text="@string/title_general"
                    android:textAllCaps="true"
                    android:textColor="@color/color_grey_400"
                    android:textSize="@dimen/sp_14"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/color_bluegrey_500"
                    android:gravity="center"
                    android:onClick="@{() -> viewModel.onShareAppClick()}"
                    android:orientation="horizontal"
                    android:padding="@dimen/dp_10"
                    android:paddingBottom="@dimen/dp_8"
                    android:paddingLeft="@dimen/dp_10"
                    android:paddingTop="@dimen/dp_8"
                    >
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/title_share_with_friend"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/sp_14"
                        />
                    <ImageView
                        android:layout_width="@dimen/dp_15"
                        android:layout_height="@dimen/dp_15"
                        app:srcCompat="@drawable/ic_right"
                        />
                </LinearLayout>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/color_grey_400"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/color_bluegrey_500"
                    android:gravity="center"
                    android:onClick="@{() -> viewModel.onRateAppClick()}"
                    android:orientation="horizontal"
                    android:padding="@dimen/dp_10"
                    android:paddingBottom="@dimen/dp_8"
                    android:paddingLeft="@dimen/dp_10"
                    android:paddingTop="@dimen/dp_8"
                    >
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/title_rate_review"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/sp_14"
                        />
                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="@dimen/dp_15"
                        android:layout_height="@dimen/dp_15"
                        app:srcCompat="@drawable/ic_right"
                        />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_20"
                    android:paddingBottom="@dimen/dp_5"
                    android:paddingLeft="@dimen/dp_10"
                    android:paddingTop="@dimen/dp_5"
                    android:text="@string/title_upgrade"
                    android:textAllCaps="true"
                    android:textColor="@color/color_grey_400"
                    android:textSize="@dimen/sp_14"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/color_bluegrey_500"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="@dimen/dp_10"
                    android:paddingBottom="@dimen/dp_8"
                    android:paddingLeft="@dimen/dp_10"
                    android:paddingTop="@dimen/dp_8"
                    >
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/title_upgrade_remove_ads"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/sp_14"
                        />
                    <ImageView
                        android:layout_width="@dimen/dp_15"
                        android:layout_height="@dimen/dp_15"
                        app:srcCompat="@drawable/ic_right"
                        />
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/color_grey_400"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/color_bluegrey_500"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="@dimen/dp_10"
                    android:paddingBottom="@dimen/dp_8"
                    android:paddingLeft="@dimen/dp_10"
                    android:paddingTop="@dimen/dp_8"
                    >
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/title_restore"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/sp_14"
                        />
                    <ImageView
                        android:layout_width="@dimen/dp_15"
                        android:layout_height="@dimen/dp_15"
                        app:srcCompat="@drawable/ic_right"
                        />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_20"
                    android:paddingBottom="@dimen/dp_5"
                    android:paddingLeft="@dimen/dp_10"
                    android:paddingTop="@dimen/dp_5"
                    android:text="@string/title_clear_cache"
                    android:textAllCaps="true"
                    android:textColor="@color/color_grey_400"
                    android:textSize="@dimen/sp_14"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/color_bluegrey_500"
                    android:gravity="center"
                    android:onClick="@{() -> viewModel.onClearCacheClick()}"
                    android:orientation="horizontal"
                    android:padding="@dimen/dp_10"
                    android:paddingBottom="@dimen/dp_8"
                    android:paddingLeft="@dimen/dp_10"
                    android:paddingTop="@dimen/dp_8"
                    >
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/title_clear_cache"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/sp_14"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{viewModel.cacheSize}"
                        android:textColor="@color/color_grey_400"
                        android:textSize="@dimen/sp_14"
                        />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_30"
                    android:background="@color/color_bluegrey_500"
                    android:gravity="center"
                    android:onClick="@{() -> viewModel.onAboutUsClick()}"
                    android:orientation="horizontal"
                    android:padding="@dimen/dp_10"
                    android:paddingBottom="@dimen/dp_8"
                    android:paddingLeft="@dimen/dp_10"
                    android:paddingTop="@dimen/dp_8"
                    >
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/title_about_us"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/sp_14"
                        />
                    <ImageView
                        android:layout_width="@dimen/dp_15"
                        android:layout_height="@dimen/dp_15"
                        app:srcCompat="@drawable/ic_right"
                        />
                    />
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/color_grey_400"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/color_bluegrey_500"
                    android:gravity="center"
                    android:onClick="@{() -> viewModel.onDisclaimerClick()}"
                    android:orientation="horizontal"
                    android:padding="@dimen/dp_10"
                    android:paddingBottom="@dimen/dp_8"
                    android:paddingLeft="@dimen/dp_10"
                    android:paddingTop="@dimen/dp_8"
                    >
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/title_disclaimer"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/sp_14"
                        />
                    <ImageView
                        android:layout_width="@dimen/dp_15"
                        android:layout_height="@dimen/dp_15"
                        app:srcCompat="@drawable/ic_right"
                        />
                    />
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/color_grey_400"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp_15"
                    android:background="@color/color_bluegrey_500"
                    android:gravity="center"
                    android:onClick="@{() -> viewModel.onEmailClick()}"
                    android:orientation="horizontal"
                    android:padding="@dimen/dp_10"
                    android:paddingBottom="@dimen/dp_8"
                    android:paddingLeft="@dimen/dp_10"
                    android:paddingTop="@dimen/dp_8"
                    >
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/title_email"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/sp_14"
                        />
                    <ImageView
                        android:layout_width="@dimen/dp_15"
                        android:layout_height="@dimen/dp_15"
                        app:srcCompat="@drawable/ic_right"
                        />
                    />
                </LinearLayout>

            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>

        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/ad_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            ads:adSize="BANNER"
            ads:adUnitId="@string/app_banner"
            />
    </LinearLayout>
</layout>
